# sdclib-workshop

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/BasicProvider/: CMakeLists.txt  main.cpp
libs/Discover/: CMakeLists.txt  main.cpp
libs/MetricProvider/: CMakeLists.txt  MetricProvider.cpp  MetricProvider.h  StateHandler.h  StateHandlerContainer.h  main.cpp
libs/SDCUtilities/: CMakeLists.txt
libs/SDCUtilities/include/SDCUtilities/: ConnectionLostHandlerImpl.h  Consumer.h  Prerequisites.h  SDCUtilities_fwd.h
libs/SDCUtilities/src/SDCUtilities/: ConnectionLostHandlerImpl.cpp  Consumer.cpp
tools/cmake/Modules/: checkRequiredCompilerCXX14.cmake  cmake_utils.cmake  definitions_and_options.cmake  reset_RPATH.cmake
tools/ws4d/: README.txt
